# windham

./: CMakeLists.txt  Kconfig  README.md  README_zh-cn.md  argon_bench.c  auto-install.sh  backend.c  cdebug.sh  cmake_uninstall.cmake.in  enclib.c  frontend.c  license.md  main.c  mapper.c  print.c  srclib.c
Document/: Q&A.md  TODOs  Untitled Diagram.drawio  how_to_use.md  technical_details.md
backend/: bklibact.c  bklibcreat.c  bklibhelp.c  bklibkey.c  bklibmain.c  bklibopen.c  bksrclib.c
build_misc/: calc_exp.py  check_keyctl.c  check_prctl_set_dumpable.c  check_prctl_speculation_ctrl.c
cmakelib/: kconfig.cmake  python.cmake  top.cmake
cmakelib/kconfig/: guiconfig.py  kconfig.py  kconfiglib.py  lint.py  menuconfig.py
configs/: aarch64_defconfig  other_defconfig  riscv64_defconfig  x86_64_defconfig
include/: aes.h  argon2.h  argon2B3.h  blake3.h  huffman.h  libprogstats.h  sha256.h  speck.h  valid_args.h  windham_const.h
include/linux_fs_include/: linux_fs.h
library_intrnlsrc/: argon_bench.c  chkhead.c  dynenc.c  enclib.c  kerkey.c  libexit.c  libloop.c  mapper.c  srclib.c  windhamtab.c
locale/: windham.pot
locale/fr/LC_MESSAGES/: windham.mo  windham.po
locale/zh_CN/LC_MESSAGES/: windham.mo  windham.po
numa/: enclib_hybrid_arch.c  enclib_numa.c
test/: test.c  test_backend.c  test_dynenc.c  test_enclib.c  test_mapper.c  testutil.c
